# static-georef-annotations

./: .gitignore  README.md  pyproject.toml
static-georef-annotations/canvas/: __init__.py  canvas.py
static_georef_annotations/: __init__.py  georef.py
static_georef_annotations/canvas/: __init__.py  canvas.py
static_georef_annotations/feature/: __init__.py  feature.py
views/: base.tpl  generate.tpl  hero.tpl  index.tpl
views/static/: app.js  cropper.tpl  map.tpl  styles.css
