[tool.poetry]
name = "static-georef-annotations"
version = "0.1.0"
description = "A tool to help create georeferencing annotations and host them in GitHub"
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bottle = "^0.12.25"
iiif-prezi3 = "^1.2.1"
httpx = "^0.27.0"
beaker = "^1.13.0"
ruff = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
